0.3.5
=====

- FIXED: Better error message when restore is already in-progress (#12)

- FIXED: Use absolute path when linking working-repo to patch-repo (#13)

- FIXED: Avoid unnecessary fetch remotes on skip/resolve/save (#7)

- FIXED: No longer leaves unused patch files in the working-repo (#9)


0.3.4
=====

- NEW OPTION: --no-fetch - Disable fetching of remotes on restore.

- FIXED: Git notes not persisting across a rebase. Reverted back to annotating
         in the commit message itself. (#4)

- FIXED: Git version differences causing chatty diffs by hardcoding it to
         constant value. (#5)

- FIXED: SHA1 missing issue which prevented three-way merges. (#3)

- FIXED: Incorrect patch counter on resolve. (#2)

- FIXED: Issue where updated patches were miscounted when adding a new patch.
         (#1)